...
<resources>
    <string name="home_title">Where are you going?</string>
    <string name="home_from">From</string>
    <string name="home_to">To</string>
    <string name="home_from_placeholder">Choose origin</string>
    <string name="home_to_placeholder">Choose destination</string>
    <string name="home_swap">Swap origin and destination</string>
    <string name="home_date">Date</string>
    <string name="home_time">Time</string>
    <string name="home_search_trains">Search trains</string>
    <string name="home_mode_depart">Depart after</string>
    <string name="home_mode_arrive">Arrive by</string>
    <string name="home_train_entry">Search by train number</string>
...
